<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/root_view"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:orientation="vertical"
  >

  <LinearLayout
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="40dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    >

    <ImageView
      android:layout_width="72dp"
      android:layout_height="72dp"
      android:layout_marginBottom="8dp"
      android:src="@mipmap/ic_launcher"
      />

    <!-- App Name -->
    <com.compscieddy.eddie_utils.eui.FontTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:letterSpacing="-0.05"
      android:text="@string/app_name"
      android:textColor="@color/black"
      android:textSize="28sp"
      app:fontface="jost_semi_bold"
      />

    <Space style="@style/SpaceHeight30dp" />

    <!-- Description -->
    <com.compscieddy.eddie_utils.eui.FontTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/authentication_description"
      android:textColor="@color/wtb_80"
      android:textSize="14sp"
      />

    <Space style="@style/SpaceHeight70dp" />

    <com.compscieddy.eddie_utils.eui.FontTextView
      android:id="@+id/want_to_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:letterSpacing="-0.02"
      android:lineSpacingMultiplier="0.9"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:fontface="jost_regular"
      />

    <Space style="@style/SpaceHeight80dp" />

    <!-- Google Sign In Button -->
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

      <Space style="@style/SpaceWidthWeight1" />

      <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="InefficientWeight"
        />

      <Space style="@style/SpaceWidthWeight1" />
    </LinearLayout>

    <Space style="@style/SpaceHeight15dp" />

    <com.compscieddy.eddie_utils.eui.FontTextView
      style="@style/AuthenticationLoginSmallText"
      android:text="@string/google_login_description"
      />

    <Space style="@style/SpaceHeight40dp" />
  </LinearLayout>

  <com.compscieddy.eddie_utils.eui.FontTextView
    style="@style/AuthenticationLoginSmallText"
    android:layout_gravity="bottom"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:text="@string/google_login_description_what_is_saved"
    android:textColor="@color/wtb_60"
    />

  <FrameLayout
    android:id="@+id/loading_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="gone"
    >

    <com.compscieddy.eddie_utils.eui.FontTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/authentication_loading_text"
      android:textSize="14sp"
      app:fontface="manrope_semi_bold"
      />
  </FrameLayout>

</FrameLayout>