<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:clipChildren="false"
  android:clipToPadding="false"
  >

  <View
    android:id="@+id/black_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_black_background"
    />

  <!-- Horizontal Container -->
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    android:clipChildren="false"
    android:clipToPadding="false"
    >

    <Space style="@style/SpaceWidthWeight1" />

    <carbon.widget.LinearLayout
      android:id="@+id/main_dialog_container"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="6"
      android:orientation="vertical"
      style="@style/StandardDialogContainer_useWithCarbonView"
      android:clipChildren="false"
      android:clipToPadding="false"
      >

      <com.compscieddy.eddie_utils.eui.FontTextView
        android:paddingTop="5dp"
        android:text="@string/new_habit_title"
        style="@style/NewHabitTitleText"
        />

      <Space style="@style/SpaceHeight10dp" />

      <com.compscieddy.eddie_utils.eui.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="+0.1"
        android:text="@string/habit_name_title"
        android:textColor="@color/standard_faded_text_color"
        style="@style/DialogTitleText"
        />

      <Space style="@style/SpaceHeight15dp" />

      <carbon.widget.FrameLayout
        android:id="@+id/new_habit_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:carbon_cornerRadius="@dimen/medium_button_corner_radius"
        >

        <com.compscieddy.eddie_utils.eui.FontTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@null"
          android:layout_gravity="center"
          android:text="@string/new_reminder_set_button"
          android:textColor="@color/white"
          app:fontface="jost_semi_bold"
          style="@style/MediumButton"
          />
      </carbon.widget.FrameLayout>
    </carbon.widget.LinearLayout><!-- @main_container -->
    <Space style="@style/SpaceWidthWeight1" />
  </LinearLayout>

</FrameLayout>