<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:clipChildren="false"
  android:clipToPadding="false"
  android:orientation="vertical"
  tools:context=".MainActivity"
  >

  <androidx.viewpager.widget.ViewPager
    android:id="@+id/god_view_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    />

  <!-- Row of God Fragment Buttons -->
  <carbon.widget.LinearLayout
    android:id="@+id/god_fragments_button_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_primary_to_transparent_bottom_to_top"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:paddingTop="20dp"
    android:paddingBottom="8dp"
    >
    <LinearLayout
      android:id="@+id/settings_navbar_container"
      style="@style/NavigationBarItemContainer"
      >
      <com.compscieddy.eddie_utils.eui.ColorImageView
        android:id="@+id/settings_god_fragment_icon"
        style="@style/NavigationBarItemIcon"
        android:src="@drawable/ic_settings_icon"
        />
      <com.compscieddy.eddie_utils.eui.FontTextView
        android:id="@+id/settings_god_fragment_title"
        style="@style/NavigationBarItemTitle"
        android:text="@string/settings_navbar_title"
        />
    </LinearLayout>
    <LinearLayout
      android:id="@+id/home_navbar_container"
      style="@style/NavigationBarItemContainer"
      >
      <com.compscieddy.eddie_utils.eui.ColorImageView
        android:id="@+id/home_god_fragment_icon"
        style="@style/NavigationBarItemIcon"
        android:src="@drawable/ic_circle_icon"
        />
      <com.compscieddy.eddie_utils.eui.FontTextView
        android:id="@+id/home_god_fragment_title"
        style="@style/NavigationBarItemTitle"
        android:text="@string/circle_navbar_title"
        />
    </LinearLayout>
    <LinearLayout
      android:id="@+id/discover_navbar_container"
      style="@style/NavigationBarItemContainer"
      >
      <com.compscieddy.eddie_utils.eui.ColorImageView
        android:id="@+id/discover_god_fragment_icon"
        style="@style/NavigationBarItemIcon"
        android:src="@drawable/ic_all_inclusive"
        />
      <com.compscieddy.eddie_utils.eui.FontTextView
        android:id="@+id/discover_god_fragment_title"
        style="@style/NavigationBarItemTitle"
        android:text="@string/infinote_navbar_title"
        />
    </LinearLayout>
  </carbon.widget.LinearLayout>

</FrameLayout>