<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >

  <View
    android:id="@+id/black_curtain_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_t90"
    />

  <androidx.core.widget.NestedScrollView
    android:id="@+id/main_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="5dp"
      >
      <!-- Photo Action Buttons -->
      <LinearLayout
        android:id="@+id/photo_action_buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        >
        <LinearLayout
          android:id="@+id/photo_save_button_container"
          style="@style/PhotoButtonContainer"
          >
          <com.compscieddy.eddie_utils.eui.FontTextView
            style="@style/PhotoButtonTitle"
            android:text="@string/photo_viewer_save_button"
            />
          <com.compscieddy.eddie_utils.eui.ColorImageView
            android:id="@+id/photo_save_button"
            style="@style/PhotoButtonIcon"
            android:src="@drawable/ic_download"
            />
        </LinearLayout>
        <LinearLayout
          android:id="@+id/photo_share_button_container"
          style="@style/PhotoButtonContainer"
          >
          <com.compscieddy.eddie_utils.eui.FontTextView
            style="@style/PhotoButtonTitle"
            android:text="@string/photo_viewer_share_button"
            />
          <com.compscieddy.eddie_utils.eui.ColorImageView
            android:id="@+id/photo_share_button"
            style="@style/PhotoButtonIcon"
            android:src="@drawable/ic_share_2"
            />
        </LinearLayout>
        <LinearLayout
          android:id="@+id/photo_delete_button_container"
          style="@style/PhotoButtonContainer"
          >
          <com.compscieddy.eddie_utils.eui.FontTextView
            style="@style/PhotoButtonTitle"
            android:text="@string/photo_viewer_delete_button"
            />
          <com.compscieddy.eddie_utils.eui.ColorImageView
            android:id="@+id/photo_delete_button"
            style="@style/PhotoButtonIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_trash"
            android:translationY="2dp"
            />
        </LinearLayout>
      </LinearLayout>

      <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"
        />

      <!-- Photo Viewer Timeline -->
      <HorizontalScrollView
        android:id="@+id/photo_viewer_entry_timeline_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/photo_viewer_padding_horizontal"
        android:paddingRight="@dimen/photo_viewer_padding_horizontal"
        android:scrollbars="none"
        >
        <LinearLayout
          android:id="@+id/photo_viewer_entry_timeline_container"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          />
      </HorizontalScrollView>

      <Space
        android:layout_width="match_parent"
        android:layout_height="13dp"
        />

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
          android:id="@+id/photo_image_view"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          />
        <carbon.widget.FrameLayout
          android:id="@+id/entry_text_view_container"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          app:carbon_cornerRadius="@dimen/entry_corner_radius"
          >
          <com.compscieddy.eddie_utils.eui.FontTextView
            android:id="@+id/entry_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="14dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:fontface="jost_regular"
            />
        </carbon.widget.FrameLayout>
        <!-- Previous/Next Button Overlays -->
        <LinearLayout
          android:id="@+id/transparent_prev_next_container"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          >
          <View
            android:id="@+id/prev_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/transparent_touch_feedback_statelist"
            />
          <View
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/transparent_touch_feedback_statelist"
            />
        </LinearLayout>
      </FrameLayout>

      <Space
        android:layout_width="match_parent"
        android:layout_height="8dp"
        />

      <com.compscieddy.eddie_utils.eui.FontAutoCompleteTextView
        android:id="@+id/photo_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/photo_caption_hint_text"
        android:imeOptions="actionDone"
        android:letterSpacing="-0.03"
        android:lineSpacingMultiplier="0.85"
        android:paddingLeft="@dimen/photo_viewer_padding_horizontal"
        android:paddingTop="6dp"
        android:paddingRight="12dp"
        android:paddingBottom="6dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_t50"
        android:textSize="18sp"
        app:fontface="jost_medium"
        />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hashtag_all_photos_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/photo_viewer_padding_horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>

</RelativeLayout>